# uav-ugv-cooperation2

./: .gitignore  README.md
docs/: RUNNING.md  map_configuration.md  portable_area_allocation_and_path_planning.md
fw/: README.md
ros2_ws/src/cf_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/cf_perception/cf_perception/: real_perception_node.py  sim_perception_node.py  yolo_detector.py
ros2_ws/src/cf_perception/config/: bytetrack_mission.yaml  camera_intrinsics.yaml
ros2_ws/src/cf_perception/docker/: Dockerfile  Dockerfile.jetpack61.backup  Dockerfile.jetson  docker-compose.jetson.yml  docker-compose.yml  fastdds_udp.xml
ros2_ws/src/gcs_dashboard/: package.xml  setup.cfg  setup.py
ros2_ws/src/gcs_dashboard/gcs_dashboard/: gcs_node.py
ros2_ws/src/gcs_dashboard/gcs_dashboard/static/: app.js
ros2_ws/src/gcs_dashboard/gcs_dashboard/templates/: index.html
ros2_ws/src/mission_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/mission_bringup/config/: ai_deck_ips.yaml  crazyflies.yaml  mission_map.yaml  true_markers.yaml
ros2_ws/src/mission_bringup/launch/: real.launch.py  sim.launch.py
ros2_ws/src/mission_control/: package.xml  setup.py
ros2_ws/src/mission_control/mission_control/: area_allocation.py  control_node.py  coverage_plan.py  grid.py  mission_planner.py  path_planning.py  zone_split.py
ros2_ws/src/mission_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/mission_interfaces/msg/: CoveragePath.msg  CoveragePathArray.msg  DroneProgress.msg  DroneProgressArray.msg  DroneState.msg  LinkStatus.msg  LinkStatusArray.msg  MarkerDetection.msg  MarkerRecord.msg  MarkerRecordArray.msg  ZoneAssignment.msg  ZoneAssignmentArray.msg
tools/: plotjuggler.xml
